<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.ssc.ttmusic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/caoluse" >

        <Button
            android:id="@+id/arrow_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/img_leftarrow" />

        <EditText
            android:id="@+id/search_edittext"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/search_btn"
            android:layout_toRightOf="@+id/arrow_btn"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/searchhint_text"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/ranktitleitem_textsize" />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/img_searchbutton" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/result_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone" >

            <com.ssc.ttmusic.view.Indicator
                android:id="@+id/search_indicator"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/bantouming"
                android:weightSum="4"
                app:color="@color/caoluse" >

                <TextView
                    android:id="@+id/search_songs"
                    style="@style/SearchTitleText"
                    android:layout_gravity="center_vertical"
                    android:text="@string/title_song" />

                <TextView
                    android:id="@+id/search_albums"
                    style="@style/SearchTitleText"
                    android:layout_gravity="center_vertical"
                    android:text="@string/title_album" />

                <TextView
                    android:id="@+id/search_collect"
                    style="@style/SearchTitleText"
                    android:layout_gravity="center_vertical"
                    android:text="@string/title_collect" />

                <TextView
                    android:id="@+id/search_singers"
                    style="@style/SearchTitleText"
                    android:layout_gravity="center_vertical"
                    android:text="@string/title_singer" />
            </com.ssc.ttmusic.view.Indicator>

            <android.support.v4.view.ViewPager
                android:id="@+id/search_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hotword_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="visible" >
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>